[package]
name = "RsActix"
version = "0.1.0"
authors = ["Róbert Fuszenecker <robert.fuszenecker@betssongroup.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
actix-web = "3.3"
actix-http = "2.2"
actix-web-static-files = "3.0"

[build-dependencies]
actix-web-static-files = "3.0"
